fns for create user stories

--- a/lib/pelable_web/templates/work_project_user_story/form.html.eex
+++ b/lib/pelable_web/templates/work_project_user_story/form.html.eex
@@ -9,6 +9,10 @@
   <%= text_input f, :status %>
   <%= error_tag f, :status %>
 
+  <%= label f, :required? %>
+  <%= checkbox f, :required? %>
+  <%= error_tag f, :required? %>
+
   <div>
     <%= submit "Save" %>
   </div>
