--- a/lib/pelable_web/templates/user_story/index.html.eex
+++ b/lib/pelable_web/templates/user_story/index.html.eex
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Body</th>
+      <th>Title</th>
 
       <th></th>
     </tr>
@@ -11,10 +11,9 @@
   <tbody>
 <%= for user_story <- @user_stories do %>
     <tr>
-      <td><%= user_story.body %></td>
+      <td><%= user_story.title %></td>
 
       <td>
-        <%= link "Show", to: Routes.user_story_path(@conn, :show, user_story) %>
         <%= link "Edit", to: Routes.user_story_path(@conn, :edit, user_story) %>
         <%= link "Delete", to: Routes.user_story_path(@conn, :delete, user_story), method: :delete, data: [confirm: "Are you sure?"] %>
       </td>
@@ -22,5 +21,3 @@
 <% end %>
   </tbody>
 </table>
-
-<span><%= link "New User story", to: Routes.user_story_path(@conn, :new) %></span>
