--- a/lib/pelable_web/templates/user_story/edit.html.eex
+++ b/lib/pelable_web/templates/user_story/edit.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit User story</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.user_story_path(@conn, :update, @user_story)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.user_story_path(@conn, :update, @user_story.uuid)) %>
 
-<span><%= link "Back", to: Routes.user_story_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.work_project_path(@conn, :show, @user_story.work_project.slug, @user_story.work_project.uuid) %></span>
