--- a/lib/pelable_web/templates/user_story/index.html.eex
+++ b/lib/pelable_web/templates/user_story/index.html.eex
@@ -14,7 +14,7 @@
       <td><%= user_story.title %></td>
 
       <td>
-        <%= link "Edit", to: Routes.user_story_path(@conn, :edit, user_story) %>
+        <%= link "Edit", to: Routes.user_story_path(@conn, :edit, user_story.uuid) %>
         <%= link "Delete", to: Routes.user_story_path(@conn, :delete, user_story), method: :delete, data: [confirm: "Are you sure?"] %>
       </td>
     </tr>
