--- a/lib/pelable_web/templates/work_project/show.html.eex
+++ b/lib/pelable_web/templates/work_project/show.html.eex
@@ -1,38 +1,47 @@
-<h2><%= @resp.work_project.name %></h2>
-<b>status: <%= @resp.work_project.work_status%> </b>
-<%= if in_progress? @resp.work_project do %>
+<style>
+ul {
+  list-style: none;
+  padding: 0;
+}
+li {
+  padding: 5px 10px;
+  background-color: #EEEEEE;
+  border: 1px solid #DDDDDD;
+}
+</style>
+
+<h2><%= @work_project.name %></h2>
+<b>status: <%= @work_project.work_status%> </b>
+<%= if in_progress? @work_project do %>
 <progress id="file" max="100" value="30"> 70% </progress><br>
 <% end %>
-<%= button "Start Project", to: Routes.work_project_path(@conn, :start, @resp.work_project.uuid), method: :post %> <br>
-<br> <%= button "New user story", to: Routes.user_story_path(@conn, :new, @resp.work_project.slug, @resp.work_project.uuid), method: :get %> <br>
+<%= button "Start Project", to: Routes.work_project_path(@conn, :start, @work_project.uuid), method: :post %> <br>
+<br> <%= button "New user story", to: Routes.user_story_path(@conn, :new, @work_project.slug, @work_project.uuid), method: :get %> <br>
 </div>
+<%= raw (HtmlSanitizeEx.basic_html (@work_project.description_html)) %>
 <ul>
-
-  <li>
-    
-    <%= raw (HtmlSanitizeEx.basic_html (@resp.work_project.description_html)) %>
-  </li>
-
 <%= if logged_in?(@conn.assigns.current_user) do %>
- <%= if is_user_creator?(@conn.assigns.current_user, @resp.work_project.creator_id) do %>
+ <%= if is_user_creator?(@conn.assigns.current_user, @work_project.creator_id) do %>
  
   
  <% end %>
  <% end %>
 
-  <%= for user_story <- @resp.user_stories, required_user_story?(user_story)  do %>
+  <%= for user_story <- @work_project.user_stories, required_user_story?(user_story)  do %>
     <li>
-    <%= user_story.title %>, status: <%= user_story.status%>
+    <%= user_story.title %> 
+    <%= link "Edit", to: Routes.user_story_path(@conn, :edit, user_story.uuid) %>
+    <%= link "Delete", to: Routes.user_story_path(@conn, :delete, user_story.uuid), method: :delete, data: [confirm: "Are you sure?"] %>
     <br> <br>
   </li>
 
   <%= end %>
-  <%= if optional_user_stories?(@resp.user_stories) do %>
+  <%= if optional_user_stories?(@work_project.user_stories) do %>
   <h4> Bonus User stories </h4>
   
-   <%= for user_story <- @resp.user_stories, optional_user_story?(user_story)  do %>
+   <%= for user_story <- @work_project.user_stories, optional_user_story?(user_story)  do %>
     <li>
-    <%= user_story.title %>, status: <%= user_story.work_status%>
+    <%= user_story.title %>, status: <%= user_story.status%>
     <br> <br>
   </li>
 
