--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -5,15 +5,45 @@
     margin-bottom:25px;
     padding:10px;
     background:#fff;
-    height:270px;
-    width:430px;
+    height:400px;
+    width:1050px;
     border:1px solid #ACD8F0;
-    overflow:auto; }
+    overflow:auto; 
+    display: inline-block;
+    }
 
   #chat-interface {
     text-align: center;
+  
   }
+ 
+ #everything {
+   text-align: center;
  }
+
+ .vertical-menu {
+  width: 200px;
+  height: 400px;
+  overflow-y: auto;
+  display: inline-block;
+}
+
+.vertical-menu a {
+  background-color: #eee;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc; /* Dark grey background on mouse-over */
+}
+
+.vertical-menu a.active {
+  background-color: #4CAF50; /* Add a green color to the "active/current" link */
+  color: white;
+}
 </style>
 
 <script>
@@ -35,25 +65,53 @@ import socket from "<%= Routes.static_path(@conn, "/js/socket.js") %>"
 import Chat from "<%= Routes.static_path(@conn, "/js/chat.js") %>"
 Chat.init(socket)
 </script>
+<div id="everything">
 <h1>The Chatroom</h1>
 Welcome to the chat!
 
 <%= tag :meta, name: "channel_token",
                content: Phoenix.Token.sign(@conn, "BndIeIG1Y5aZGD534Z0WFpwG+oBWlOkeD/C1lIGvR+mSKF0rNpRWYodPr+0YM2yr", @current_user.id) %>
 <div id="chat-interface">
+
+<br><br>
+<div class="vertical-menu">
+
+<a> <b> Your Chats</b> </a>
+<%= if @user.joined_chats != [] do %>
+<%= for chatroom <- @user.joined_chats do %>
+ <%= link chatroom.name, to: Routes.chatroom_path(@conn, :show, chatroom.uuid) %>
+ <%= end %>
+ <%= end %>
+
+ <%= if @user.chat_invitations != [] do %>
+ <a> <b> Chat invitations </b> </a>
+<%= for chatroom <- @user.chat_invitations do %>
+<%= link chatroom.name, to: Routes.chatroom_path(@conn, :show, chatroom.uuid) %>
+ <% end %>
+ <% end %>
+
+</div>
+
+
+
+
 <div id="chat-box">
 <%= for message <- @messages do %>
   <p><b><%= message.sender.username %>:</b> <%= message.body %></p>
 <% end %>
 </div>
 
+
+
 <form id="chat-form">
 <input type="textarea" placeholder="Your message" id="body" name="message">
 <input type="submit" value="Post">
 </form>
 
-</div>
 
+
+</div>
+</div>
 <script>
 let chatBox = document.querySelector('#chat-box')
 chatBox.scrollTop = 100000
