render html in chat messages safely (escaped)

--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -70,7 +70,7 @@ Welcome to the chat!
 
 <div id="chat-box">
 <%= for message <- @messages do %>
-  <p> <datetime> <%= message.inserted_at %></datetime> <b><%= message.sender.username %>:</b> <%= message.body %></p>
+  <%= render_message message %>
 <% end %>
 </div>
 
