--- a/lib/pelable_web/templates/pow/session/new.html.eex
+++ b/lib/pelable_web/templates/pow/session/new.html.eex
@@ -26,3 +26,4 @@
 
 
 <span><%= link "Register", to: Routes.pow_registration_path(@conn, :new) %></span>
+<%= link("Reset password", to: Routes.pow_reset_password_reset_password_path(@conn, :new)) %>
