add completed program to landing requirement

--- a/lib/pelable_web/templates/page/landing.html.eex
+++ b/lib/pelable_web/templates/page/landing.html.eex
@@ -173,7 +173,7 @@ s0.parentNode.insertBefore(s1,s0);
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
-										<p> The only prerequisite is to know the basics of a programming language (You have taken an introductory course)</p>
+										<p> The only prerequisite is to know the basics of a programming language (You have completed an introductory course)</p>
 									</div>
 								</li>
 
