--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -34,14 +34,15 @@ function myFunction() {
       <section class="">
         <nav role="navigation">
           <div class="topnav" id="myTopnav">
-  <a href="/projects" class="">Projects</a>
+  
+   <a href="/apply">Apply</a>
+  <a href="/chat/AZ3X37GsBebR">Chat</a>
   <%= if Pow.Plug.current_user(@conn) do %>
   <% else %>
   <a href="<%= Routes.pow_registration_path(@conn, :new) %>" class="">Sign up</a>
   <a href="<%= Routes.pow_session_path(@conn, :new) %>" class="">Login</a>
   <% end %>
-  <a href="/chat/AZ3X37GsBebR">Chat</a>
-  <a href="/landing">About</a>
+  
   <%= if Pow.Plug.current_user(@conn) do %>
   <a href="/#dashboard"> My Dashboard </a>
   <span><%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete %></span>
